--- a/css/bootstrap-4.0.0.css
+++ b/css/bootstrap-4.0.0.css
@@ -206,8 +206,9 @@ figure {
 }
 
 img {
-  vertical-align: middle;
-  border-style: none;
+	vertical-align: middle;
+	border-style: none;
+	border-width: 0%;
 }
 
 svg:not(:root) {
@@ -372,7 +373,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+	font-size: 2rem;
+	text-align: center;
 }
 
 h3, .h3 {
@@ -594,13 +596,13 @@ pre code {
 }
 
 .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-right: 0px;
+	margin-left: 0px;
 }
 
 .no-gutters {
@@ -722,10 +724,10 @@ pre code {
 }
 
 .col-12 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 100%;
+	flex: 0 0 100%;
+	max-width: 75%;
 }
 
 .order-first {
@@ -1629,13 +1631,13 @@ pre code {
     order: 12;
   }
   .offset-xl-0 {
-    margin-left: 0;
+	margin-left: 12.5px;
   }
   .offset-xl-1 {
-    margin-left: 8.333333%;
+	margin-left: 12.5%;
   }
   .offset-xl-2 {
-    margin-left: 16.666667%;
+	margin-right: 0px;
   }
   .offset-xl-3 {
     margin-left: 25%;
@@ -1964,7 +1966,7 @@ pre code {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -2054,7 +2056,7 @@ select.form-control:focus::-ms-value {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0;
-  line-height: 1.5;
+  line-height: 7.5;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
