--- a/css/bootstrap-4.0.0.css
+++ b/css/bootstrap-4.0.0.css
@@ -85,17 +85,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+	margin-top: 0;
+	margin-bottom: 1rem;
+	text-align: left;
 }
 
 abbr[title],
 abbr[data-original-title] {
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
+	text-decoration: underline;
+	-webkit-text-decoration: underline dotted;
+	text-decoration: underline dotted;
+	cursor: help;
+	border-bottom: 0;
+	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif;
 }
 
 address {
@@ -375,10 +377,13 @@ h1, .h1 {
 h2, .h2 {
 	font-size: 3rem;
 	text-align: center;
+	font-style: normal;
 }
 
 h3, .h3 {
-  font-size: 1.75rem;
+	font-size: 2rem;
+	font-style: normal;
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 }
 
 h4, .h4 {
@@ -390,7 +395,7 @@ h5, .h5 {
 }
 
 h6, .h6 {
-  font-size: 1rem;
+	font-size: 2rem;
 }
 
 .lead {
@@ -8742,7 +8747,8 @@ button.bg-dark:focus {
 }
 
 .text-center {
-  text-align: center !important;
+	text-align: center !important;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif, "微软雅黑 Light";
 }
 
 @media (min-width: 576px) {
